代码生成模板修改  配合BaseService使用

--- a/src/main/resources/generator/template/Service.java.vm
+++ b/src/main/resources/generator/template/Service.java.vm
@@ -12,7 +12,7 @@ import java.util.Map;
  * @email ${email}
  * @date ${datetime}
  */
-public interface ${className}Service {
+public interface ${className}Service extends BaseService<${className}>{
 	
 	${className} get(${pk.attrType} ${pk.attrname});
 	
