--- a/src/main/resources/generator/template/Entity.java.vm
+++ b/src/main/resources/generator/template/Entity.java.vm
@@ -1,5 +1,7 @@
 package ${package}.entity;
 
+import com.fasterxml.jackson.annotation.JsonFormat;
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import lombok.Data;
 
 import java.io.Serializable;
@@ -18,10 +20,21 @@ import java.math.BigDecimal;
  * @date ${datetime}
  */
 @Data
+@JsonIgnoreProperties(ignoreUnknown = true)
 public class ${className} implements Serializable {
 	private static final long serialVersionUID = 1L;
 	
 #foreach ($column in $columns)
+
+	#if ($column.attrType=='Date')
+	/**
+	 *
+	 * $column.comments
+	 */
+	@JsonFormat(timezone = "GMT+8", pattern = "yyyy-MM-dd HH:mm:ss")
+	private $column.attrType $column.attrname;
+	#end
+
 	/**
 	 *
 	 * $column.comments
