--- a/src/main/resources/generator/template/Mapper.xml.vm
+++ b/src/main/resources/generator/template/Mapper.xml.vm
@@ -3,89 +3,97 @@
 
 <mapper namespace="${package}.mapper.${className}Mapper">
 
-	<!-- 可根据自己的需求，是否要使用 -->
+    <!-- 可根据自己的需求，是否要使用 -->
     <resultMap type="${package}.entity.${className}" id="${classname}Map">
-#foreach($column in $columns)
-        <result property="${column.attrname}" column="${column.columnName}"/>
-#end
+        #foreach($column in $columns)
+            <result property="${column.attrname}" column="${column.columnName}"/>
+        #end
     </resultMap>
 
-	<select id="get" resultType="${package}.entity.${className}">
+    <select id="get" resultType="${package}.entity.${className}">
 		select * from ${tableName} where ${pk.columnName} = #{value}
 	</select>
 
-	<select id="getList" resultType="${package}.entity.${className}">
-		select * from ${tableName} t <include refid="where_clause" />
+    <select id="getList" resultType="${package}.entity.${className}">
+        select * from ${tableName} t
+        <include refid="where_clause"/>
         <choose>
             <when test="sidx != null and sidx.trim() != ''">
                 order by ${sidx} ${order}
             </when>
-			<otherwise>
+            <otherwise>
                 order by ${pk.columnName} desc
-			</otherwise>
+            </otherwise>
         </choose>
-		<if test="offset != null and limit != null">
-			limit #{offset}, #{limit}
-		</if>
-	</select>
-	
- 	<select id="getCount" resultType="int">
-		select count(*) from ${tableName} t  <include refid="where_clause" />
-	</select>
+        <if test="offset != null and limit != null">
+            limit #{offset}, #{limit}
+        </if>
+    </select>
+
+    <select id="getCount" resultType="int">
+        select count(*) from ${tableName} t
+        <include refid="where_clause"/>
+    </select>
 
     <!-- 搜索数据区域 -->
     <sql id="where_clause">
         <where>
             1=1
-#foreach($column in $columns)
-            <if test="${column.attrname} != null and ${column.attrname} != ''"> and t.${column.columnName} = #{${column.attrname}} </if>
-    		<if test="${column.attrname}Vague != null and ${column.attrname}Vague != ''"> and t.${column.columnName} like concat('%',#{${column.attrname}Vague},'%') </if>
-#end
+            #foreach($column in $columns)
+                <if test="${column.attrname} != null and ${column.attrname} != ''">and t.${column.columnName} =
+                    #{${column.attrname}}
+                </if>
+                <if test="${column.attrname}Vague != null and ${column.attrname}Vague != ''">and t.${column.columnName}
+                    like concat('%',#{${column.attrname}Vague},'%')
+                </if>
+            #end
         </where>
     </sql>
-	 
-	<insert id="save" parameterType="${package}.entity.${className}"#if($pk.extra == 'auto_increment') useGeneratedKeys="true" keyProperty="$pk.attrname"#end>
+
+    <insert id="save" parameterType="${package}.entity.${className}"#if($pk.extra == 'auto_increment')
+            useGeneratedKeys="true" keyProperty="$pk.attrname"#end>
 		insert into ${tableName}
 		(
 #foreach($column in $columns)
-#if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
+        #if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
 			`$column.columnName`#if($velocityCount != $columns.size()), #end
 
-#end			
-#end
+        #end
+    #end
 		)
 		values
 		(
 #foreach($column in $columns)
-#if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
+        #if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
 			#{$column.attrname}#if($velocityCount != $columns.size()), #end
 
-#end			
-#end
+        #end
+    #end
 		)
 	</insert>
 
-	<update id="update" parameterType="${package}.entity.${className}">
-		update ${tableName} 
-		<set>
-#foreach($column in $columns)
-#if($column.columnName != $pk.columnName)
-			<if test="$column.attrname != null">`$column.columnName` = #{$column.attrname}#if($velocityCount != $columns.size()), #end</if>
-#end
-#end
-		</set>
-		where ${pk.columnName} = #{${pk.attrname}}
-	</update>
-	
-	<delete id="delete">
+    <update id="update" parameterType="${package}.entity.${className}">
+        update ${tableName}
+        <set>
+            #foreach($column in $columns)
+                #if($column.columnName != $pk.columnName)
+                    <if test="$column.attrname != null">`$column.columnName` = #{$column.attrname
+                        }#if($velocityCount != $columns.size()), #end</if>
+                #end
+            #end
+        </set>
+        where ${pk.columnName} = #{${pk.attrname}}
+    </update>
+
+    <delete id="delete">
 		delete from ${tableName} where ${pk.columnName} = #{value}
 	</delete>
-	
-	<delete id="deleteBatch">
-		delete from ${tableName} where ${pk.columnName} in 
-		<foreach item="${pk.attrname}" collection="array" open="(" separator="," close=")">
-			#{${pk.attrname}}
-		</foreach>
-	</delete>
+
+    <delete id="deleteBatch">
+        delete from ${tableName} where ${pk.columnName} in
+        <foreach item="${pk.attrname}" collection="array" open="(" separator="," close=")">
+            #{${pk.attrname}}
+        </foreach>
+    </delete>
 
 </mapper>
