--- a/src/main/resources/generator/template/menu.sql.vm
+++ b/src/main/resources/generator/template/menu.sql.vm
@@ -1,6 +1,6 @@
 -- 菜单SQL
 INSERT INTO `admin_sys_menu` (`parent_id`, `name`, `url`, `perms`, `type`, `icon`, `order_num`)
-    VALUES ('1', '${comments}', '${pathName}/list', NULL, '1', 'fa fa-file-code-o', '6');
+    VALUES ('1', '${comments}', '${pathName}/list', '${pathName}:list', '1', 'fa fa-file-code-o', '6');
 
 -- 按钮父菜单ID
 set @parentId = @@identity;
